Project Evolution v2: Full Platform Implementation with DuckDB, ML Anomaly Detection, and Dashboard

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,4 +20,7 @@ ipykernel>=6.29.0
 # API and utilities
 requests>=2.31.0
 tqdm>=4.66.0
+fastapi>=0.110.0
+uvicorn>=0.27.0
+python-multipart>=0.0.9
 
